k8s/qdrant-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: qdrant-external
  namespace: qdrant
spec:
  type: NodePort
  selector:
    app: qdrant
  ports:
    - name: http
      port: 6333
      targetPort: 6333
      nodePort: 30633
    - name: grpc
      port: 6334
      targetPort: 6334
      nodePort: 30634
